2006-04-19  Bastien Nocera  <hadess@hadess.net>

	* lib/gam_error.c: (gam_error_init): avoid changing the signal at all
	as it would break applications if they setup their signal handlers
	with sigaction, and used the SA_SIGINFO flag (which would change
	the number of arguments to the handler)

Mon Mar  6 13:52:40 CET 2006 Daniel Veillard <veillard@redhat.com>

	* gamin.pc.in: fix cflags for pkg-config as raised by
	  Claudio Fontana in the mailing-list

Thu Nov 24 17:15:49 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in server/gam_inotify.c: inotify.h may be found
	  under <sys/inotify.h> too

Thu Oct 27 15:28:14 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in NEWS doc/*: release of 0.1.7

Thu Oct 27 13:00:25 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_listener.c: applied patch from Ed Catmur fixing 
	  gam_server segfaulting on inotify backend, should fix #319697

Thu Oct 27 12:51:17 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_fork.c tests/testing.c: applied patch
	  from Daichi Kawahata to compile on systems without setenv()

Tue Oct 25 2005  Christopher Aillon  <caillon@redhat.com>

	* server/gam_dnotify.c:
	* server/gam_hurd_mach_notify.c:
	* server/gam_inotify.c:
	Fix up minor leaks of GSource*

Thu Sep 22 10:07:30 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c: reproduced RH bug #168744, one need to
	  force nfs mounts to use poll and run from nfs. Seems to have a
	  fix for it.

Thu Sep 22 08:54:55 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* tests/Makefile.am: cleanups for make valgrind

Tue Sep 20 17:12:28 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c: trying to fix RH bug #168744

Sat Sep 10 12:46:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_connection.c: fixed a portability problem raised by
	  Sjoerd Simons
