@@ -185,6 +185,7 @@ dnl check if inotify backend is enabled
 AM_CONDITIONAL(ENABLE_INOTIFY, test x$inotify = xtrue)
 
 if test x$inotify = xtrue; then
+	AC_CHECK_HEADERS(linux/types.h)
 	AC_CHECK_HEADERS(linux/inotify.h)
 	AC_CHECK_HEADERS(sys/inotify.h)
 	AC_DEFINE(ENABLE_INOTIFY,1,[Use inotify as backend])
@@ -416,6 +417,9 @@ dnl
 dnl check for python
 dnl
 
+AC_ARG_WITH(python,
+[  --with-python[[=DIR]]     build Python bindings if found])
+
 PYTHON_VERSION=
 PYTHON_INCLUDES=
 PYTHON_SITE_PACKAGES=
@@ -434,6 +438,7 @@ if test "$with_python" != "no" ; then
 	    if test -x "$PYTHON"
 	    then
 	        echo Found python in environment PYTHON=$PYTHON
+		with_python=`$PYTHON -c "import sys; print sys.exec_prefix"`
 	    else
 		AC_PATH_PROG(PYTHON, python python2.6 python2.5 python2.4 python2.3 python2.2 python2.1 python2.0 python1.6 python1.5)
 	    fi
@@ -450,17 +455,17 @@ if test "$with_python" != "no" ; then
 	   -d $with_python/lib/python$PYTHON_VERSION/site-packages
 	then
 	    PYTHON_INCLUDES=$with_python/include/python$PYTHON_VERSION
-	    PYTHON_SITE_PACKAGES=$with_python/lib/python$PYTHON_VERSION/site-packages
+	    PYTHON_SITE_PACKAGES=$libdir/lib/python$PYTHON_VERSION/site-packages
 	else
 	    if test -r $prefix/include/python$PYTHON_VERSION/Python.h
 	    then
-	        PYTHON_INCLUDES='$(prefix)/include/python$(PYTHON_VERSION)'
-		PYTHON_SITE_PACKAGES='$(libdir)/python$(PYTHON_VERSION)/site-packages'
+	        PYTHON_INCLUDES=$prefix/include/python$PYTHON_VERSION
+		PYTHON_SITE_PACKAGES=$libdir/python$PYTHON_VERSION/site-packages
 	    else
 		if test -r /usr/include/python$PYTHON_VERSION/Python.h
 		then
 		    PYTHON_INCLUDES=/usr/include/python$PYTHON_VERSION
-		    PYTHON_SITE_PACKAGES='$(libdir)/python$(PYTHON_VERSION)/site-packages'
+		    PYTHON_SITE_PACKAGES=$libdir/python$PYTHON_VERSION/site-packages
 		else
 		    echo could not find python$PYTHON_VERSION/Python.h
 		fi
@@ -473,9 +478,9 @@ if test "$with_python" != "no" ; then
     fi
     if test "$with_python" != ""
     then
-        pythondir='$(PYTHON_SITE_PACKAGES)'
+        pythondir=$PYTHON_SITE_PACKAGES
     else
-        pythondir='$(libdir)/python${PYTHON_VERSION}/site-packages'
+        pythondir=$libdir/python$PYTHON_VERSION/site-packages
     fi
 fi
 AM_CONDITIONAL(WITH_PYTHON, test "$PYTHON_INCLUDES" != "")
